samples/_failures_safe/1761444896_c54d00_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_188bdba1.c: In function ‘main’:
./samples/SAFE/__tmp_188bdba1.c:153:9: error: expected declaration or statement at end of input
  153 |         printf("No valid input data\n");
      |         ^~~~~~
./samples/SAFE/__tmp_188bdba1.c:153:9: error: expected declaration or statement at end of input
